--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% for product in product_list %}
+
+{{product.name}}
+
+{% endfor %}
 
 
 
@@ -7,8 +12,7 @@
 
 
 
-
-<!-- Test code for reverse relationship lookup
+Test code for reverse relationship lookup
 {% block content %}
 
 <h1>This is the products page</h1>
@@ -22,7 +26,7 @@
         qty: {{ product.count }}
         color: {{ product.color }}
     {% endfor %}
-{% endfor %} -->
+{% endfor %}
 
 
 
