--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,10 +1,15 @@
 {% extends "base.html" %}
 
-
+{% block content %}
 <h1>{{ object.name }}</h1>
 <h1>{{ product.name }}</h1>
+<h1>{% with product.inventory_set.all as inventory %}</h1>
+<h1>{% for variant in inventory %}</h1>
+<h1>{{ variant.sku }}: {{variant.size}}: {{variant.color}}</h1>
+<h1>{% endfor %}</h1>
+<h1>{% endwith %}</h1>
 
-
+{% endblock %}
 
 
 
