--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -22,7 +22,7 @@
       <select name = "stockable" class="form-control" id="exampleFormControlSelect1">
         <option value="">Choose</option>
         {% for variant in inventory %}
-        <option class = "size-option" data-size = "{{ variant.size }}"" value = "{{ variant.count }}">{{variant.size}}</option>
+        <option class = "size-option" value = "{{ variant.size }}"" data-count = "{{ variant.count }}">{{variant.size}}</option>
         {% endfor %}
       </select>
     </div>
