--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -11,45 +11,30 @@
 
 
 
-<form action = "" method ="POST">
+<form method ="POST" action = "{% url 'add_to_bag' product.id %}">
     {% csrf_token %}
     <div class="form-group">
       <label for="exampleFormControlSelect1">Example select</label>
       <select name = "stockable" class="form-control" id="exampleFormControlSelect1">
         {% for variant in inventory %}
-        <option class = "size-option" value = "{{ variant.size }}"" data-count = "{{ variant.count }}">{{variant.size}}</option>
+        <option name = 'product_size' class = "size-option" value = "{{ variant.size }}"" data-count = "{{ variant.count }}">{{variant.size}}</option>
         {% endfor %}
       </select>
       <div class="col-12">
-        <p class="mt-3"><strong>Quantity:</strong></p>
-        <div class="form-group w-50">
-            <div class="input-group">
-                <div class="input-group-prepend">
-                    <button class="decrement-qty btn btn-black rounded-0" 
-                        data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                        <span class="icon">
-                            <i class="fas fa-minus"></i>
-                        </span>
-                    </button>
-                </div>
-                <input class="form-control qty_input qty-input" type="number"
-                    name="quantity" value="1" min="1" max="99"
-                    data-item_id="{{ product.id }}"
-                    id="id_qty_{{ product.id }}">
-                <div class="input-group-append">
-                    <button class="increment-qty btn btn-black rounded-0"
-                        data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                        <span class="icon">
-                            <i class="fas fa-plus"></i>
-                        </span>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
+          <p class="mt-3"><strong>Quantity:</strong></p>
+          <div class="form-group w-50">
+              <div class="input-group">
+                  <div class="input-group-prepend">
+                      <input class="form-control qty_input qty-input" type="number" name="quantity" value="1" min="1"
+                          max="99""
+                    id=" id_qty">
+                  </div>
+              </div>
+          </div>
       <div>
           <input type="submit" value = "Add to Cart" class = "btn btn-primary">
       </div>
+      <input type="hidden" value = "sku" value = "{{variant.sku}}">
       <input type="hidden" name = "redirect_url" value = "{{request.path}}">
     </div>
   </form>
