--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,5 +1,58 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
-<h1>Index.html</h1>
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item height-85 active">
+            <!-- Image Oleksandr Sushko unsplash -->
+            <img src="{% static 'img/home-carousel-1.jpg' %}" class="d-block w-100" alt="dolphins with coral">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Learn to Dive with us...</h5>
+            </div>
+        </div>
+        <div class="carousel-item height-85">
+            <img src="{% static 'img/home-carousel-1.jpg' %}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Buy equipment our instructors trust</h5>
+            </div>
+        </div>
+        <div class="carousel-item height-85">
+            <img src="{% static 'img/home-carousel-1.jpg' %}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+<div>
+    <hr>
+</div>
+<div class = "container">
+    <div class="row">
+        <div class="col-md p-3" style ="background-color:aqua; height:320px;">
+            <img src="{% static 'img/garbage-home-triple.webp' %}" class="d-block w-100 cover-center-h100" alt="...">
+        </div>
+        <div class="col-md p-3" style ="background-color:rgb(8, 0, 255); height:320px;">col-md</div>
+        <div class="col-md p-3" style ="background-color:rgb(0, 255, 51); height:320px;">col-md</div>
+    </div>
+</div>
+
 {% endblock %}
