--- a/static/css/base.css
+++ b/static/css/base.css
@@ -30,3 +30,118 @@
     object-position: center center;
     height: 100%;
 }
+
+.bg-img-holder-home::after{
+    content: '';
+    background-image: url(../img/buy-scuba-equipment.webp);
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: top;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: calc(100 / 100);
+}
+
+.bg-img-holder-home {
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+    text-decoration: none;
+    justify-content: flex-start;
+    text-align: center;
+    position: relative;
+    padding: 21px 21px 42px 21px;
+    min-height: 300px;
+  }
+
+.holder-home-inner{
+    display: flex;
+    text-align: left;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 50%;
+}
+
+.home-inner-headline {
+    display: flex;
+    align-items: center;
+    font-family: inherit;
+    font-size: 55px;
+    font-weight: 400;
+    min-height: 48px;
+    color: #444444;
+}
+
+.home-inner-body {
+    font-size: 18px;
+    margin-top: 8px;
+    min-height: 27px;
+    color: #444444;
+}
+
+.home-inner-button-container {
+  background: rgba(36,47,109,1);
+  border: none;
+  color: rgba(255,255,255,1);
+  cursor: pointer;
+  font-size: 18px;
+  margin-top: 24px;
+  outline: none;
+  padding: 8px 24px;
+  pointer-events: auto;
+  text-decoration: none;
+  border-radius: 4px;
+  font-family: inherit;
+}
+
+.home-inner-button-text {
+    color: rgba(255,255,255,1);
+    cursor: pointer;
+    font-size: 18px;
+    pointer-events: auto;
+    font-family: inherit;
+  }
+
+@media screen and (min-width: 801px) {
+    .bg-img-holder-home {
+        max-height: none;
+        min-height: 500px;
+        padding: 32px 42px;
+    }
+
+    .home-inner-headline {
+        min-height: 50px;
+        color: rgba(255, 255, 255, 1);
+    }
+
+    .home-inner-body {
+        color: rgba(255, 255, 255, 1);
+        min-height: 31px;
+        margin-top: 8px;
+    }
+
+    .home-inner-button-container {
+        background: rgba(36, 47, 109, 1);
+        color: rgba(255, 255, 255, 1);
+        font-size: 21px;
+    }
+}
+
+
+/* -----------------Products List Pages---------------------- */
+
+.col-sm.product-list{
+    width:320px;
+}
+
+@media screen and (min-width: 801px) {
+    .card.product-list {
+        max-width: 200px;
+    }
+}
