--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -4,20 +4,32 @@
 
 <div class="container">
     <div class="row">
-        {% for product in object_list %}
-            <div class="col-sm product-list">
-                <div class="card product-list mx-auto ms-md-0" style = "width:320px;">
-                    <a href="{% url 'product_detail' product.slug %}"><img class="card-img-top" src="{% static 'img/garbage-home-triple.webp' %}" alt="Card image cap""></a>
-                    <div class="card-body">
-                      <h5 class="card-title">{{product.name}}</h5>
-                    </div>
+        <div class="d-none d-lg-block col-lg-3">
+            <p>lorem ipsum dolor sit amet, consectetur adipisicing</p>
+            <p>lorem ipsum dolor sit amet, consectetur adipisicing</p>
+            <p>lorem ipsum dolor sit amet, consectetur adipisicing</p>
+            <p>lorem ipsum dolor sit amet, consectetur adipisicing</p>
+            <p>lorem ipsum dolor sit amet, consectetur adipisicing</p>
+        </div>
+        <div class="col">
+            <div class="row">
+                {% for product in object_list %}
+                <div class="col-sm product-list">
+                    <div class="card product-list mx-auto ms-md-0" style="width:320px;">
+                        <a href="{% url 'product_detail' product.slug %}"><img class="card-img-top"
+                                src="{% static 'img/garbage-home-triple.webp' %}" alt="Card image cap""></a>
+                        <div class=" card-body">
+                            <h5 class="card-title">{{product.name}}</h5>
+                        </div>
                     <ul class="list-group list-group-flush">
-                      <li class="list-group-item">£{{product.price}}</li>
-                      <li class="list-group-item">Rating: {{product.rating}}</li>
+                        <li class="list-group-item">£{{product.price}}</li>
+                        <li class="list-group-item">Rating: {{product.rating}}</li>
                     </ul>
+                    </div>
                 </div>
+                {% endfor %}
             </div>
-        {% endfor %}
+        </div>
     </div>
 </div>
 {% for product in object_list %}
