--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -24,6 +24,7 @@
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">£{{product.price}}</li>
                         <li class="list-group-item">Rating: {{product.rating}}</li>
+                        <li>blah</li>
                     </ul>
                     </div>
                 </div>
