--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -5,11 +5,9 @@
 <div class="container">
     <div class="row">
         <div class="d-none d-lg-block col-lg-3">
-            <p>lorem ipsum dolor sit amet, consectetur adipisicing</p>
-            <p>lorem ipsum dolor sit amet, consectetur adipisicing</p>
-            <p>lorem ipsum dolor sit amet, consectetur adipisicing</p>
-            <p>lorem ipsum dolor sit amet, consectetur adipisicing</p>
-            <p>lorem ipsum dolor sit amet, consectetur adipisicing</p>
+            {% for category in categories %}
+            <h5>{{ category.name }}</h5>
+            {% endfor %}
         </div>
         <div class="col">
             <div class="row">
@@ -24,7 +22,6 @@
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">£{{product.price}}</li>
                         <li class="list-group-item">Rating: {{product.rating}}</li>
-                        <li>blah</li>
                     </ul>
                     </div>
                 </div>
