--- a/templates/base.html
+++ b/templates/base.html
@@ -101,10 +101,10 @@
                 </div>
               </nav>
               <div>
-                <form class="d-lg-none d-flex">
-                    <input class="form-control me-2" type="search" placeholder="What are you looking for?" aria-label="Search">
+                <form class="d-lg-none d-flex" method="GET" action="{% url 'search_products' %}">
+                    <input class="form-control me-2" type="search" name="q" placeholder="What are you looking for?" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
-                  </form>
+                </form>
               </div>
         </header>
         {% if messages %}
