--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -9,7 +9,9 @@
     <div class="row">
         <div class="col">
             {% if bag_items %}
-            <div class="table-responsive"></div>
+            {% for item in bag_items %}
+            <h1>{{ item }}</h1>
+            {% endfor %}
             {% else %}
             <p>Your bag is empty</p>
             {% endif %}
