--- a/templates/base.html
+++ b/templates/base.html
@@ -75,8 +75,9 @@
                         </ul>
                       </li> -->
                     </ul>
-                    <form class="d-none d-lg-flex mx-auto">
-                      <input class="form-control ms-5" type="search" placeholder="What are you looking for?" aria-label="Search">
+                    <form class="d-none d-lg-flex mx-auto" method="GET" action = "{% url 'search_products' %}">
+                      {% csrf_token %}
+                      <input class="form-control ms-5" name = "q" type="search" placeholder="What are you looking for?" aria-label="Search">
                       <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                     <ul class="navbar-nav me-auto me-lg-1 ms-lg-auto mb-2 mb-lg-0">
