--- a/templates/base.html
+++ b/templates/base.html
@@ -133,8 +133,12 @@
 
     {% block postloadjs %}
     <script type="text/javascript">
-      $('.toast').toast('show')
-    </script>        
+      var toastElList = [].slice.call(document.querySelectorAll('.toast'))
+      var toastList = toastElList.map(function (toastEl) {
+        return new bootstrap.Toast(toastEl)
+      });
+      toastList.forEach(toast => toast.show());
+    </script>
     {% endblock %}
 
 
