--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -48,8 +48,8 @@
 <div class = "container">
     <div class="row d-flex justify-content-around">
         <div class="col-md mt-3">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="{% static 'img/garbage-home-triple.webp' %}" alt="Card image cap">
+            <div class="card mx-auto">
+                <img class="card-img-top mx-auto" src="{% static 'img/garbage-home-triple.webp' %}" alt="Learn to dive">
                 <div class="card-body">
                   <h5 class="card-title">Learn to Dive</h5>
                   <p class="card-text">Discover Scuba with us...</p>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="col-md">
-            <div class="card" style="width: 18rem;">
+            <div class="card mx-auto">
                 <img class="card-img-top" src="{% static 'img/garbage-home-triple.webp' %}" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Continue your diving</h5>
@@ -68,7 +68,7 @@
               </div>
         </div>
         <div class="col-md mt-md-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card mx-auto">
                 <img class="card-img-top" src="{% static 'img/garbage-home-triple.webp' %}" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Pro Diving Courses</h5>
