put overlay on home page carousel

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,7 +2,17 @@
 {% load static %}
 
 {% block content %}
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide d-none d-sm-flex position-relative" data-bs-ride="carousel">
+    <div class = "container-fluid position-absolute top-0 start-0 w-100 h-100" id="overlay-text">
+        <div class="row h-100 w-100">
+            <div class="col col-md-6 d-flex flex-column align-items-center justify-content-center z-index-9999">
+                <h1 class="z-index-9999 white-text font-size-3em text-uppercase ms-5 me-auto">Learn to Scuba Dive</h1>
+                <p class="white-text align-self-start fs-4 ms-5 me-auto">Start your Scuba Diving journey with us</p>
+                <a class="align-self-start btn btn-primary fs-3 ms-5 me-auto" href="#">Start Now</a>
+            </div>
+            <div class="col col-md-6"></div>
+        </div>
+    </div>
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
@@ -15,22 +25,12 @@
         <div class="carousel-item height-85 active">
             <!-- Image Oleksandr Sushko unsplash -->
             <img src="{% static 'img/home-carousel-1.jpg' %}" class="d-block w-100" alt="dolphins with coral">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Learn to Dive with us...</h5>
-            </div>
         </div>
         <div class="carousel-item height-85">
             <img src="{% static 'img/home-carousel-1.jpg' %}" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Buy equipment our instructors trust</h5>
-            </div>
         </div>
         <div class="carousel-item height-85">
             <img src="{% static 'img/home-carousel-1.jpg' %}" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-            </div>
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -82,21 +82,19 @@
 <div>
     <hr>
 </div>
-<div class="container-fluid">
-    <div>
-        <div id ="shop-now-holder" class="bg-img-holder-home">
-            <div class="holder-home-inner">
-                <div class="home-inner-headline">
-                    <h2><strong>SCUBA DIVING EQUIPMENT</strong></h2>
-                </div>
-                <div class="home-inner-body">
-                    <p>
-                        EQUIPMENT TRUSTED BY OUR INSTRUCTORS
-                    </p>
-                </div>
-                <div role="button" class="home-inner-button-container">
-                    <a id="shop-now" href="{% url 'all_products' %}">Shop Now</a>
-                </div>
+<div class="container-fluid p-0">
+    <div id="shop-now-holder" class="bg-img-holder-home">
+        <div class="holder-home-inner">
+            <div class="home-inner-headline">
+                <h2><strong>SCUBA DIVING EQUIPMENT</strong></h2>
+            </div>
+            <div class="home-inner-body">
+                <p>
+                    EQUIPMENT TRUSTED BY OUR INSTRUCTORS
+                </p>
+            </div>
+            <div role="button" class="home-inner-button-container">
+                <a id="shop-now" href="{% url 'all_products' %}">Shop Now</a>
             </div>
         </div>
     </div>
