add meta to base

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,7 +10,7 @@
                 <p class="white-text align-self-start fs-4 ms-5 me-auto">Start your Scuba Diving journey with us</p>
                 <a class="align-self-start btn btn-primary fs-3 ms-5 me-auto" href="#">Start Now</a>
             </div>
-            <div class="col col-md-6"></div>
+            <div class="d-none col-md-6"></div>
         </div>
     </div>
     <div class="carousel-indicators">
