--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
             <meta http-equiv="X-UA-Compatible" content="ie=edge">
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+            <meta name="description" content="Scubasport, Scuba Diving, Learn to Scuba UK, Shop Scuba Equipment">
+            <meta name="keywords" content="Scuba Equipment, Learn to Scuba Dive, Scuba Diving Near me, Scuba Diving Courses UK, Shop Scuba Equipment, Scuba Equipment Rental, Beginner Scuba Diving, Scuba Diving Lesson Cost, PADI Certification Cost, How do I become a certified diver, how much does it cost to learn to scuba dive, wet suits, dry suits, regulators, fins, masks, snorkels, BCDS, Diving qualifications, become a diving instructor">
+            <meta name="author" content="Daniel Richards">
         {% endblock %}
         {% block extra_meta %}
         {% endblock %}
