--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -11,11 +11,16 @@
         </div>
         <div class="col">
             <div class="row">
-                {% for product in object_list %}
+                {% for product in filter.qs %}
                 <div class="col-sm product-list">
                     <div class="card product-list mx-auto ms-md-0" style="width:320px;">
+                        {% if product.image %}
+                        <a href="{% url 'product_detail' product.slug %}"><img class="card-img-top"
+                            src="{{ product.image.url }}" alt="Card image cap""></a>
+                        {% else %}
                         <a href="{% url 'product_detail' product.slug %}"><img class="card-img-top"
                                 src="{% static 'img/garbage-home-triple.webp' %}" alt="Card image cap""></a>
+                        {% endif %}
                         <div class=" card-body">
                             <h5 class="card-title">{{product.name}}</h5>
                         </div>
