--- a/static/css/base.css
+++ b/static/css/base.css
@@ -29,6 +29,10 @@
 
 /*------------Styling home page ---------------------------*/
 
+.navbar{
+    z-index: 100000;
+}
+
 .z-index-9999{
     z-index:9999;
 }
