add my_tags.py to preserve filter url on paginate. Adjust product list to contain form.  Upload images. Adjust base html to be more code efficient with loops for category

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,21 +1,57 @@
 {% extends "base.html" %}
 {% load static %}
+{% load my_tags %}
 {% block content %}
 
 <div class="container">
+    <div class="row">
+        <div class="col">
+            <h1 class="my-5">
+                SHOP
+            </h1>
+        </div>
+    </div>
     <div class="row">
         <div class="d-none d-lg-block col-lg-3">
             {% for category in categories %}
             <h5>{{ category.name }}</h5>
             {% endfor %}
         </div>
-        <form method = "GET">
-        {{ filter.form }}
-        <button type ="submit" class = "btn btn-primary">Search</button>
-        </form>
         <div class="col">
+            <div class="row mb-5">
+                <div class = "col">
+                    <form>
+                        <div class="fieldWrapper">
+                            {{ filter.form.popularity |as_crispy_field }}
+                        </div>                        
+                        <button type="submit" class="btn btn-primary">Search</button>
+                    </form>
+                </div>
+                <div class="pagination">
+                    {% load my_tags %}
+
+                    {% if is_paginated %}
+                      {% if page_obj.has_previous %}
+                        <a href="?{% param_replace page=1 %}">First</a>
+                        {% if page_obj.previous_page_number != 1 %}
+                          <a href="?{% param_replace page=page_obj.previous_page_number %}">Previous</a>
+                        {% endif %}
+                      {% endif %}
+                    
+                      Page {{ page_obj.number }} of {{ paginator.num_pages }}
+                    
+                      {% if page_obj.has_next %}
+                        {% if page_obj.next_page_number != paginator.num_pages %}
+                          <a href="?{% param_replace page=page_obj.next_page_number %}">Next</a>
+                        {% endif %}
+                        <a href="?{% param_replace page=paginator.num_pages %}">Last</a>
+                      {% endif %}
+                    
+                      <p>Objects {{ page_obj.start_index }}—{{ page_obj.end_index }}</p>
+                    {% endif %}
+                </div>
             <div class="row">
-                {% for product in filter.qs %}
+                {% for product in object_list %}
                 <div class="col-sm product-list">
                     <div class="card product-list mx-auto ms-md-0" style="width:320px;">
                         {% if product.image %}
