--- a/static/css/base.css
+++ b/static/css/base.css
@@ -178,6 +178,10 @@
     width:320px;
 }
 
+.height-160px{
+    height: 160px;
+}
+
 @media screen and (min-width: 801px) {
     .card.product-list {
         max-width: 200px;
